common composable table height

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,13 @@
 * {
   font-family: "Roboto", sans-serif;
 }
+
+/* Custom Ant Design Table Scroll */
+.ant-table-body{
+  overflow-y: hidden!important;
+}
+
+.ant-table-body:hover{
+  overflow-y: scroll!important;
+}
+/* Custom Ant Design Table Scroll */
